Fix documentation generation
After migration to the `io.spring.asciidoctor.backends:spring-asciidoctor-backends`,
we missed to fix configuration for the respective `asciidoctor` Gradle tasks